# VernonDSL

./: .gitignore  BUILD_INSTRUCTIONS.md  BUILD_POWERSHELL.md  CMakeLists.txt  build.ps1  build.sh  fractal.py  pyproject.toml
source/: CMakeLists.txt  README.md
source/include/mlir/Dialect/Vernon/IR/: CMakeLists.txt  Vernon.h  VernonDialect.td  VernonOps.td  VernonTypes.td
source/include/mlir/Dialect/Vernon/Transforms/: VernonToSpirv.h
source/lib/Dialect/Vernon/IR/: CMakeLists.txt  VernonDialect.cpp  VernonOps.cpp  VernonTypes.cpp
source/lib/Dialect/Vernon/Transforms/: CMakeLists.txt  VernonToSpirv.cpp
source/tests/integration/: color.mlir
source/tools/vernon_opt/: CMakeLists.txt  vernon_opt.cpp
